--- a/rc17/src/main/res/values/strings.xml
+++ b/rc17/src/main/res/values/strings.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="categoryStatus">Server Status</string>
-    <string name="categoryTS">TeamSpeak</string>
-    <string name="categoryMapCycle">Map Cycle</string>
-    <string name="actionRefresh">Refresh</string>
-    <string name="actionLoad">Load</string>
-
+    <!-- App -->
     <string name="app_name">Renegade Clan</string>
+
+    <!-- Menu Actions -->
     <string name="action_refresh">Refresh</string>
 
+    <!-- Tab Titles -->
     <string name="title_section1">Status</string>
     <string name="title_section2">TeamSpeak</string>
     <string name="title_section3">Cycle</string>
     <string name="title_section4">Bans</string>
     <string name="title_section5">Warnings</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <!-- Status -->
     <string name="mapImageDescription">Map Image</string>
     <string name="lblTimelimit">Timelimit</string>
     <string name="lblMapDesc">Description</string>
@@ -35,11 +32,9 @@
     <string name="serverEmpty">Server is empty</string>
     <string name="serverName">Server Name</string>
 
+    <!-- Placeholder Text -->
     <string name="sampleText">Lorem ipsum</string>
     <string name="sampleDate">01/01/15 12:30p</string>
-
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
 
     <!-- Bans -->
     <string name="bans_banner">Banner:</string>
