--- a/rc17/src/main/res/values/strings.xml
+++ b/rc17/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="mapVotes">%1$d / %2$d</string>
     <string name="lastPlayed">%1$d map%2$s ago</string>
     <string name="mapUsage">%.2f%%</string>
+    <string name="never">Never</string>
 
 </resources>
